--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.github.NaikSoftware:NaikSoftware-Lib-Android:e0a9c7f05f'
+    compile 'com.android.support:design:+'
+    compile 'com.android.support:cardview-v7:+'
+    compile 'com.github.NaikSoftware:NaikSoftware-Lib-Android:0.0.3'
 }
