--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.github.NaikSoftware:NaikSoftware-Lib-Android:0.0.4'
+    compile 'com.github.NaikSoftware:NaikSoftware-Lib-Android:2ce8fa4982'
 }
